@@ -120,7 +120,8 @@ int masq(	int sock,
 {
 	struct pfioc_natlook natlook;
 	int pfdev;
-	int ret;
+	int retm;
+	int retf;
 	char os[24];
 	char user[MAX_ULEN];
 	struct sockaddr_storage ss;
@@ -162,11 +163,14 @@ int masq(	int sock,
 
 	sin_setv4(natlook.rsaddr.v4.s_addr, &ss);
 
-	if (opt_enabled(FORWARD)) {
-		ret = fwd_request(sock, lport, masq_lport, fport, masq_fport, &ss);
-		if (ret == 0)
-			return (0);
-		else {
+	retm = find_masq_entry(&ss, user, sizeof(user), os, sizeof(os));
+
+	if (opt_enabled(FORWARD) && (retm != 0 || !opt_enabled(MASQ_OVERRIDE))) {
+		retf = fwd_request(sock, lport, masq_lport, fport, masq_fport, &ss);
+		if (retf == 0) {
+			if (retm != 0)
+				return (0);
+		} else {
 			char ipbuf[MAX_IPLEN];
 
 			get_ip(&ss, ipbuf, sizeof(ipbuf));
@@ -175,8 +179,7 @@ int masq(	int sock,
 		}
 	}
 
-	ret = find_masq_entry(&ss, user, sizeof(user), os, sizeof(os));
-	if (ret == 0) {
+	if (retm == 0) {
 		char ipbuf[MAX_IPLEN];
 
 		sockprintf(sock, "%d , %d : USERID : %s : %s\r\n",
